--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,4 +39,30 @@ body {
 
 .link:hover {
   color: #FF0000;
+}
+
+.name-page {
+  margin-top: 35px;
+  margin-bottom: 50px;
+}
+
+.settings {
+  display: inline-block;
+}
+
+.setting-label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.field {
+  display: inline-block;
+  border: 1px solid;
+  width: 100px;
+  height: 100px;
+}
+
+.input {
+  margin-bottom: 30px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
