--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -1,6 +1,11 @@
+.interface
+    &-block
+        display: flex
+        justify-content: space-around
+
 .name-page
     margin-top: 35px
-    margin-bottom: 50px
+    margin-bottom: 70px
 
 .settings
     display: inline-block
@@ -10,10 +15,9 @@
     margin-bottom: 10px
 
 .field
-    display: inline-block
     border: 1px solid
-    width: 100px
-    height: 100px
+    width: 500px
+    height: 500px
 
 .input
     margin-bottom: 30px
