--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -9,15 +9,18 @@
 
 .settings
     display: inline-block
+    padding-top: 70px
 
-.setting-label
+
+.settings-label
     display: block
     margin-bottom: 10px
 
+
 .field
     border: 1px solid
-    width: 500px
-    height: 500px
+    width: 550px
+    height: 550px
 
 .input
     margin-bottom: 30px
