--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -15,6 +15,8 @@
 .settings-label
     display: block
     margin-bottom: 10px
+    font-size: 25px
+    font-weight: 400
 
 
 .field
@@ -25,3 +27,7 @@
 .input
     margin-bottom: 30px
     text-align: center
+
+.settings-input
+    width: 180px
+    height: 25px
