--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -9,3 +9,30 @@ body
 .title
     font-size: 28px
     font-weight: 100
+
+.hero
+    margin-top: 20px
+    &-navbar
+        height: 50px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        background-color: $white-color
+        border: 1px solid $border-line
+        border-radius: 8px
+
+.links
+    width: 90%
+    display: flex
+    justify-content: space-around
+
+.logo
+    margin-left: 25px
+
+.link
+    text-decoration: none
+    color: $black-color
+    transition: all 0.2s
+
+.link:hover
+    color: $red-color
