--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -32,3 +32,8 @@
     width: 180px
     height: 25px
 
+.cell
+    width: 11px
+    height: 11px
+    border: 1px solid black
+    display: inline-block
