add generate points

--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -21,8 +21,8 @@
 
 .field
     border: 1px solid
-    width: 550px
-    height: 550px
+    width: 550
+    height: 550
     // box-sizing: border-box
 
     
