--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -7,8 +7,12 @@ body
     margin: auto
 
 .title
-    font-size: 28px
-    font-weight: 100
+    display: flex
+    justify-content: center
+    align-items: center
+    &-text
+        font-size: 28px
+        font-weight: 100
 
 .hero
     margin-top: 20px
@@ -76,4 +80,5 @@ body
 
 .button
     padding: 7px 15px
+    width: 150px
         
