--- a/src/sass/_burger.sass
+++ b/src/sass/_burger.sass
@@ -1,6 +1,7 @@
 @media (max-width: 992px)
     .menu
         display: block
+        border-radius: 8px
     .links
         position: absolute
         width: 300px
