--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -81,4 +81,11 @@ body
 .button
     padding: 7px 15px
     width: 150px
+
+@media (max-width: 992px)
+    .container
+        max-width: 960px
+    .logo
+        margin-right: 17px
+    
         
