--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -25,8 +25,6 @@
     height: 550px
     // box-sizing: border-box
 
-    
-
 .input
     margin-bottom: 30px
     text-align: center
@@ -39,5 +37,20 @@
     height: 50px
     border: 1px solid red
 
-.first-button
-    margin-bottom: 15px
+.first-buttons
+    margin-bottom: 10px
+
+.buttons-generate
+    margin-right: 7px
+
+.add-st
+    margin-right: 7px
+
+@media (max-width: 992px)
+    .interface-block
+        flex-direction: column-reverse
+    .field
+        margin: auto
+    .btn
+        text-align: center
+
