--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,6 +98,10 @@ body {
   width: 150px;
 }
 
+.list.star .list-link {
+  color: red;
+}
+
 @media (max-width: 992px) {
   .container {
     max-width: 960px;
