--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -82,6 +82,9 @@ body
     padding: 7px 15px
     width: 150px
 
+.list.star .list-link
+    color: red
+
 @media (max-width: 992px)
     .container
         max-width: 960px
