--- a/src/css/style.css
+++ b/src/css/style.css
@@ -221,4 +221,10 @@ body {
   .button-style {
     margin-right: 7px;
   }
+}
+@media (max-width: 992px) {
+  .long {
+    background-color: green;
+    overflow-wrap: break-word;
+  }
 }/*# sourceMappingURL=style.css.map */
