--- a/src/css/style.css
+++ b/src/css/style.css
@@ -223,8 +223,8 @@ body {
   }
 }
 @media (max-width: 992px) {
-  .long {
-    background-color: green;
-    overflow-wrap: break-word;
+  .long::after {
+    content: "\a";
+    white-space: pre;
   }
 }/*# sourceMappingURL=style.css.map */
