--- a/src/sass/blocks/_cluster.sass
+++ b/src/sass/blocks/_cluster.sass
@@ -1,4 +1,5 @@
 @media (max-width: 992px)
-    .long
-        background-color: green
-        overflow-wrap: break-word
+    .long::after
+        content: "\A"
+        white-space: pre
+    
