--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -42,6 +42,10 @@ body
        color: $black-color
        transition: all 0.2s
 
+// canvas
+//     width: 100%
+//     height: 100%
+
 .list-link:hover
     color: $red-color
 
@@ -81,9 +85,6 @@ body
 .button
     padding: 7px 15px
     width: 150px
-
-.list.star .list-link
-    color: red
 
 @media (max-width: 992px)
     .container
