--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -93,3 +93,14 @@ body
         margin-right: 17px
     
         
+@media (max-width: 768px)
+    .container
+        max-width: 760px
+    .logo
+        margin-right: 17px
+    
+@media (max-width: 576px)
+    .container
+        max-width: 540px
+    .logo
+        margin-right: 17px
