--- a/src/sass/blocks/_cluster.sass
+++ b/src/sass/blocks/_cluster.sass
@@ -3,3 +3,12 @@
         content: "\A"
         white-space: pre
     
+@media (max-width: 768px)
+    .long::after
+        content: "\A"
+        white-space: pre
+    
+@media (max-width: 576px)
+   .long::after
+        content: "\A"
+        white-space: pre
