--- a/src/sass/blocks/_genetic.sass
+++ b/src/sass/blocks/_genetic.sass
@@ -16,3 +16,22 @@
         &-style
             margin-right: 7px
     
+@media (max-width: 768px)
+    .configure
+        margin-top: 15px
+        display: flex
+        flex-direction: row
+        justify-content: center
+    .button
+        &-style
+            margin-right: 7px
+    
+@media (max-width: 576px)
+    .configure
+        margin-top: 15px
+        display: flex
+        flex-direction: row
+        justify-content: center
+    .button
+        &-style
+            margin-right: 7px
