--- a/src/sass/blocks/_neural.sass
+++ b/src/sass/blocks/_neural.sass
@@ -2,3 +2,10 @@
     .configure
         align-items: center
     
+@media (max-width: 768px)
+    .configure
+        align-items: center
+    
+@media (max-width: 576px)
+    .configure
+        align-items: center
