--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -54,3 +54,18 @@
     .btn
         text-align: center
 
+@media (max-width: 768px)
+    .interface-block
+        flex-direction: column-reverse
+    .field
+        margin: auto
+    .btn
+        text-align: center
+    
+@media (max-width: 576px)
+    .interface-block
+        flex-direction: column-reverse
+    .field
+        margin: auto
+    .btn
+        text-align: center
