--- a/src/sass/blocks/_star.sass
+++ b/src/sass/blocks/_star.sass
@@ -66,6 +66,8 @@
     .interface-block
         flex-direction: column-reverse
     .field
+        width: 410px
+        height: 410px
         margin: auto
     .btn
         text-align: center
