--- a/src/sass/blocks/_genetic.sass
+++ b/src/sass/blocks/_genetic.sass
@@ -32,6 +32,12 @@
         display: flex
         flex-direction: row
         justify-content: center
+    .field
+        width: 410px
+        height: 410px
+    canvas
+        width: 410px
+        height: 410px
     .button
         &-style
             margin-right: 7px
